- [Bug #1] Fixed bug where on mobile, the "Register Now" button on the home page was behind the map. - Fixed un reported bug that errored application when venues would attempt geo locating and no location would be found.

--- a/assets/less/events.less
+++ b/assets/less/events.less
@@ -47,6 +47,10 @@
         position: absolute;
         right: 0;
     }
+
+    .event-actions {
+        overflow: hidden;
+    }
 }
 
 .event-meta-line {
